fix(plugin-provide-popup): make popup fixed, forbidden parent node overflow hidden

--- a/packages/core/src/plugins/provide-popup/popupsControlled.scss
+++ b/packages/core/src/plugins/provide-popup/popupsControlled.scss
@@ -4,6 +4,6 @@
   background-color: var(--shikitor-fg-color);
   padding: 2px 4px;
   &-relative, &-absolute {
-    position: absolute;
+    position: fixed;
   }
 }
